--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </h3>
         </div>
         <div id="contact">
-            <h2>Get in touch with me:</h2>
+            <h2 id="con">Get in touch with me:</h2>
             <a href= "mailto:allysafletcher@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Email</a>&emsp;
     
             <a href="https://twitter.com/alldanmos" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>&emsp;
