--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
         </div>
         <div id="skills" class="container-fluid">
-            <h3>"I can tell you I don't have money. But what I do have are a very particular set of skills,"</h3>
+            <h3 class="lob">"I can tell you I don't have money. But what I do have are a very particular set of skills,"</h3>
             <div id="list">
             <ul>
                 <li><span>HTML</span></li>
@@ -99,7 +99,7 @@
                 Working on stars and new skills <span>all.the.time.</span>
             </h3>
         </div>
-        <div id="contact">
+        <div class="lob">
             <h2 id="con">Get in touch with me:</h2>
             <a href= "mailto:allysafletcher@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Email</a>&emsp;
     
