--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 Working on stars and new skills <span>all.the.time.</span>
             </h3>
         </div>
-        <div class="lob">
-            <h2 id="con">Get in touch with me:</h2>
+        <div id="contact">
+            <h2 class="con">Get in touch with me:</h2>
             <a href= "mailto:allysafletcher@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Email</a>&emsp;
     
             <a href="https://twitter.com/alldanmos" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>&emsp;
