--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="animated bounceInRight">
                 <h3>I'm Allysa.</h3>
             </div>
-            <img src="me.jpg">
+            <img src="me.jpg" id="me">
             <p>
                 The big goal right now is to become a developer. I'm interested in front end and back end development. I'm also a lover of dogs, television, and pizza in all it's various forms.
             </p>
@@ -105,9 +105,18 @@
             </h3>
         </div>
         
-        <div id="work">
+        <div id="work" class="container-fluid">
             <h2>See what I'm working on now!</h2>
-            <a href="https://github.com/alldanfin"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+            <a href="https://github.com/alldanfin"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br>
+            
+            <a href="https://twitter.com/search?q=%2330days30sites&src=typd">#30days30sites</a><br>
+            <div id="event">
+                <img src="eventsite.jpeg"><br>
+                <a href="https://alldanfin.github.io/Day-2/">Event Invite</a>
+            </div><div id="tour">
+                <img src="tourist.jpeg"><br>
+                <a href="https://alldanfin.github.io/Day-3/">Tourist Attraction</a>
+            </div>
         </div>
         <div id="contact">
             <h2>Get in touch with me:</h2>
