--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="animated bounceInRight">
                 <h3>I'm Allysa.</h3>
             </div>
-            <img src="me.jpg" id="me">
+            <img src="me-min.jpg" id="me">
             <p>
                 The big goal right now is to become a developer. I'm interested in front end and back end development. I'm also a lover of dogs, television, and pizza in all it's various forms.
             </p>
@@ -111,10 +111,10 @@
             
             <a href="https://twitter.com/search?q=%2330days30sites&src=typd">#30days30sites</a><br>
             <div id="event">
-                <img src="eventsite.jpeg"><br>
+                <img src="eventsite-min.jpeg"><br>
                 <a href="https://alldanfin.github.io/Day-2/">Event Invite</a>
             </div><div id="tour">
-                <img src="tourist.jpeg"><br>
+                <img src="tourist-min.jpg"><br>
                 <a href="https://alldanfin.github.io/Day-3/">Tourist Attraction</a>
             </div>
         </div>
