--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </h3>
         </div>
         
-        <div id="work" class="container-fluid">
+        <div id="work" class="container-fluid text-center">
             <h2>See what I'm working on now!</h2>
             <a href="https://github.com/alldanfin"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br>
             
