--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
                 <img src="tourist-min.jpg"><br>
                 <a target="_blank" href="https://alldanfin.github.io/Day-3/">Tourist Attraction</a>
             </div>
+            <div>
+                <a href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
+            </div>
         </div>
         <div id="contact">
             <h2>Get in touch with me:</h2>
