--- a/index.html
+++ b/index.html
@@ -138,15 +138,13 @@
             <a href="https://github.com/alldanfin"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br>
             
             <a target="_blank" href="https://twitter.com/search?q=%2330days30sites&src=typd">#30days30sites</a><br>
-            <div id="event">
-                <img src="eventsite-min.jpeg"><br>
-                <a target="_blank" href="https://alldanfin.github.io/Day-2/">Event Invite</a>
-            </div><div id="tour">
-                <img src="tourist-min.jpg"><br>
-                <a target="_blank" href="https://alldanfin.github.io/Day-3/">Tourist Attraction</a>
+            <div id="event" class="sites">
+                <a target="_blank" href="https://alldanfin.github.io/Day-2/"><img src="eventsite-min.jpeg"><br>Event Invite</a>
+            </div><div id="tour" class="sites">
+                <a target="_blank" href="https://alldanfin.github.io/Day-3/"><img src="tourist-min.jpg"><br>Tourist Attraction</a>
             </div>
-            <div id="menu">
-                <a href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
+            <div id="menu" class="sites">
+                <a target="_blank" href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
             </div>
         </div>
         <div id="contact">
