added product to portfolio
added product site to 30days30sites portfolio section

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
             <div id="menu" class="sites">
                 <a target="_blank" href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
             </div>
+            <div id="product" class="sites">
+                <a target="_blank" href="https://alldanfin.github.io/HanzoSteel/"><img src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=https%3A%2F%2Falldanfin.github.io%2FHanzoSteel%2F"><br>Product</a>
+            </div>
         </div>
         <div id="contact">
             <h2>Get in touch with me:</h2>
