--- a/index.html
+++ b/index.html
@@ -137,17 +137,19 @@
             <h2>See what I'm working on now!</h2>
             <a href="https://github.com/alldanfin"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br>
             
-            <a target="_blank" href="https://twitter.com/search?q=%2330days30sites&src=typd">#30days30sites</a><br>
-            <div id="event" class="sites">
-                <a target="_blank" href="https://alldanfin.github.io/Day-2/"><img src="eventsite-min.jpeg"><br>Event Invite</a>
-            </div><div id="tour" class="sites">
-                <a target="_blank" href="https://alldanfin.github.io/Day-3/"><img src="tourist-min.jpg"><br>Tourist Attraction</a>
-            </div>
-            <div id="menu" class="sites">
-                <a target="_blank" href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
-            </div>
-            <div id="product" class="sites">
-                <a target="_blank" href="https://alldanfin.github.io/HanzoSteel/"><img src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=https%3A%2F%2Falldanfin.github.io%2FHanzoSteel%2F"><br>Product</a>
+            <div class="sitelinks">
+                <a target="_blank" href="https://twitter.com/search?q=%2330days30sites&src=typd">#30days30sites</a><br>
+                <div id="event" class="sites">
+                    <a target="_blank" href="https://alldanfin.github.io/Day-2/"><img src="eventsite-min.jpeg"><br>Event Invite</a>
+                </div><div id="tour" class="sites">
+                    <a target="_blank" href="https://alldanfin.github.io/Day-3/"><img src="tourist-min.jpg"><br>Tourist Attraction</a>
+                </div>
+                <div id="menu" class="sites">
+                    <a target="_blank" href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
+                </div>
+                <div id="product" class="sites">
+                    <a target="_blank" href="https://alldanfin.github.io/HanzoSteel/"><img src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=https%3A%2F%2Falldanfin.github.io%2FHanzoSteel%2F"><br>Product</a>
+                </div>
             </div>
         </div>
         <div id="contact">
