--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </div>
             <img src="https://s19.postimg.org/54sztbhnn/imageedit_2_7377749349.jpg" id="me" alt="picture of myself, Allysa Fletcher">
             <p>
-                The big goal right now is to become a developer. I'm interested in front end and back end development. I'm also a lover of dogs, television, and pizza in all it's various forms.
+                I'm an enthusiastistic creative developer in the Memphis area.
+                Passionate about making things pretty and continually learning 
+                new things all the time to become a Jill of all trades.
             </p>
         </div>
         <div id="skills" class="container-fluid">
