--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <a target="_blank" href="https://codepen.io/alldanmos/pen/NawgXW"><img src="https://s19.postimg.org/fx6lyw7cz/694219.Nawg_XW.small.d5fa26a8-b2cf-404e-b641-d1139f22c9b6.png"><br>Quote Generator</a>
                 </div>
                 <div id="product" class="sites">
-                    <a target="_blank" href="https://alldanfin.github.io/HanzoSteel/"><img src="https://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=https%3A%2F%2Falldanfin.github.io%2FHanzoSteel%2F"><br>Product</a>
+                    <a target="_blank" href="https://alldanfin.github.io/HanzoSteel/"><img src="https://s19.postimg.org/6m742zh1v/serve.png"><br>Product</a>
                 </div>
                 <div id="menu" class="sites">
                     <a target="_blank" href="https://alldanfin.github.io/Menu/"><img src="https://s26.postimg.org/hppg6n2eh/shot-20170903-23689-4h80h2.jpg"><br>Menu</a>
